// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress[Base] should render correctly  1`] = `
<div
  class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
  style="width: 400px;"
>
  <div
    class="c-wnsv6n"
  >
    <div
      class="c-r99stv"
      style="width: 75%;"
    />
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about animation 1`] = `
<div>
  <div>
    <div
      class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
      style="width: 400px;"
    >
      <div
        class="c-wnsv6n"
      >
        <div
          class="c-r99stv"
          style="width: 0%;"
        />
      </div>
      <div
        class="c-592hqn"
      >
        <div
          style="width: 50px;"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="cy3z4pk c5ec6a3 czfd77c"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="cyvvh8d"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="chtyxkh"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="0,188.49555921538757"
          stroke-linecap="round"
          stroke-width="0"
        />
      </svg>
      <div
        class="c-592hqn"
      >
        0%
      </div>
    </div>
  </div>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    style="margin-top: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about animation 2`] = `
<div>
  <div>
    <div
      class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
      style="width: 400px;"
    >
      <div
        class="c-wnsv6n"
      >
        <div
          class="c-r99stv"
          style="width: 3.536664885867941%;"
        />
      </div>
      <div
        class="c-592hqn"
      >
        <div
          style="width: 50px;"
        >
          4%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="cy3z4pk c5ec6a3 czfd77c"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="cyvvh8d"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="chtyxkh"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="6.666456254191023,181.82910296119653"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      <div
        class="c-592hqn"
      >
        4%
      </div>
    </div>
  </div>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    style="margin-top: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about circle 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="cy3z4pk c5ec6a3 c-ipopgn"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c-592hqn"
    >
       
      60%
       
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 cdvdutt"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="131.9468914507713,56.54866776461628"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cv5m43l"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12 3C11.4477 3 11 3.44772 11 4V16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16V4C13 3.44772 12.5523 3 12 3ZM12 19C11.4477 19 11 19.4477 11 20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20C13 19.4477 12.5523 19 12 19Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 czfd77c"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="150.79644737231007,37.6991118430775"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cv5m43l"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 c-ffa8mq"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="169.64600329384882,18.84955592153875"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cv5m43l"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about color 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 40%;"
      />
    </div>
    <div
      class="c-592hqn"
    >
      40%
    </div>
  </div>
  <br />
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 75%;"
      >
        <div
          class="c-592hqn"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="cy3z4pk c5ec6a3 c-ipopgn"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <defs>
        <lineargradient
          id="progress-linear"
          x1="50%"
          x2="50%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#19A9FA"
          />
          <stop
            offset="100%"
            stop-color="#7949FF"
          />
        </lineargradient>
      </defs>
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
        style="stroke: url('#progress-linear');"
      />
    </svg>
    <div
      class="c-592hqn"
    >
      60%
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about lineInner 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 32px; width: 400px;"
>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye cxggdoi"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 0%;"
      >
        <div
          class="c-592hqn"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye cxggdoi"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 5%;"
      >
        <div
          class="c-592hqn"
        >
          5%
        </div>
      </div>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 40%;"
      >
        <div
          class="c-592hqn"
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 cdvdutt c-r7ozye"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 50%;"
      >
        <div
          class="c-592hqn"
        >
          50%
        </div>
      </div>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 czfd77c c-r7ozye"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 100%;"
      >
        <div
          class="c-592hqn"
        >
          100%
        </div>
      </div>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ffa8mq c-r7ozye"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 60%;"
      >
        <div
          class="c-592hqn"
        >
          60%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about linePop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb c-i29sej"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 0%;"
      />
    </div>
    <div
      class="c-oqcraa"
      style="left: 0%; transform: translateX(-50%) rotate(0deg);"
    >
      <span
        class="cqhhj7g"
      >
        0%
      </span>
      <span
        class="cq68tuc"
      />
    </div>
  </div>
  <br />
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about linepop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb c-i29sej"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 4.784617515493274%;"
      />
    </div>
    <div
      class="c-oqcraa"
      style="left: 4.784617515493274%; transform: translateX(-50%) rotate(1.1961543788733184deg);"
    >
      <span
        class="cqhhj7g"
      >
        4%
      </span>
      <span
        class="cq68tuc"
      />
    </div>
  </div>
  <br />
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cw6sirj"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        small
      </span>
    </div>
    <div
      class="c-emivhp c-wsxxws"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        default
      </span>
    </div>
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
    style="width: 400px;"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 75%;"
      />
    </div>
    <div
      class="c-592hqn"
    >
      <span>
        75%
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 40%;"
      >
        <div
          class="c-592hqn"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 c-ipopgn"
    style="width: 64px; height: 64px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="cyvvh8d"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c-592hqn"
    >
      <span>
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 2`] = `
<div>
  <div
    class="cw6sirj"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-emivhp c-wsxxws"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        small
      </span>
    </div>
    <div
      class="c-emivhp"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        default
      </span>
    </div>
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
    style="width: 400px;"
  >
    <div
      class="c-wnsv6n"
      style="height: 3px; border-radius: 1.5px;"
    >
      <div
        class="c-r99stv"
        style="width: 75%; border-radius: 1.5px;"
      />
    </div>
    <div
      class="c-592hqn"
    >
      <span
        style="font-size: 12px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="c-wnsv6n"
      style="height: 16px; border-radius: 8px;"
    >
      <div
        class="c-r99stv"
        style="width: 40%; border-radius: 8px;"
      >
        <div
          class="c-592hqn"
        >
          <span
            style="font-size: 12px;"
          >
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 c-ipopgn"
    style="width: 48px; height: 48px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 48 48"
    >
      <circle
        class="cyvvh8d"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-dasharray="82.93804605477052,55.29203070318036"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c-592hqn"
    >
      <span
        style="font-size: 12px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 3`] = `
<div>
  <div
    class="cw6sirj"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-emivhp"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        small
      </span>
    </div>
    <div
      class="c-emivhp"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        default
      </span>
    </div>
    <div
      class="c-emivhp c-wsxxws"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-yzux30"
      >
        <span
          class="c-2ldwtt"
          tabindex="1"
        />
      </span>
      <span
        class="c-qgj373"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
    style="width: 400px;"
  >
    <div
      class="c-wnsv6n"
      style="height: 8px; border-radius: 4px;"
    >
      <div
        class="c-r99stv"
        style="width: 75%; border-radius: 4px;"
      />
    </div>
    <div
      class="c-592hqn"
    >
      <span
        style="font-size: 16px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-r7ozye"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="c-wnsv6n"
      style="height: 24px; border-radius: 12px;"
    >
      <div
        class="c-r99stv"
        style="width: 40%; border-radius: 12px;"
      >
        <div
          class="c-592hqn"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cy3z4pk c5ec6a3 c-ipopgn"
    style="width: 80px; height: 80px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 80 80"
    >
      <circle
        class="cyvvh8d"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-width="4"
      />
      <circle
        class="chtyxkh"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-dasharray="143.25662500369455,95.50441666912971"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c-592hqn"
    >
      <span
        style="font-size: 16px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about type 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="cv5o5h8 c5ec6a3 czfd77c c-jrmckb"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 100%;"
      />
    </div>
  </div>
  <br />
  <div
    class="cv5o5h8 c5ec6a3 c-ipopgn c-jrmckb"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 90%;"
      />
    </div>
  </div>
  <br />
  <div
    class="cv5o5h8 c5ec6a3 cdvdutt c-jrmckb"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 80%;"
      />
    </div>
  </div>
  <br />
  <div
    class="cv5o5h8 c5ec6a3 c-ffa8mq c-jrmckb"
  >
    <div
      class="c-wnsv6n"
    >
      <div
        class="c-r99stv"
        style="width: 70%;"
      />
    </div>
  </div>
</div>
`;
